# mygrad

./: .gitignore  README.md  numeric_vs_automatic.ipynb  pyproject.toml  setup.py  t.py
mygrad/: __init__.py  base.py  nn.py  tensor.py
src/mygrad/: act_fun.py  base.py  nn.py  tensor.py
test/: test_fun_tanh.py  test_tensor_add.py  test_tensor_matmul.py  test_tensor_mul.py  test_tensor_sub.py  test_tensor_sum.py
